--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -475,7 +475,6 @@ label.margin-toggle:not(.sidenote-number) {
         clear: both;
         width: 95%;
         margin: 1rem 2.5%;
-        vertical-align: baseline;
         position: relative;
     }
 
@@ -492,9 +491,20 @@ label.margin-toggle:not(.sidenote-number) {
         width: 100%;
     }
 }
-
-canvas {
-    width: 100vw;
-    height: 100vh;
+.canvas-wrapper {
+    position: relative;
+    padding-bottom: 0;
+    padding-top: 0;
+    width: 100%;
+    height: 300px;
     display: block;
-  }
+}
+
+.canvas-wrapper canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+}
